[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Spike/sand_striker8.png" type="Texture" id=1]
[ext_resource path="res://Assets/Spike/sand_striker2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Spike/sand_striker1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Spike/Spike.gd" type="Script" id=4]
[ext_resource path="res://Assets/Spike/sand_striker6.png" type="Texture" id=5]
[ext_resource path="res://Assets/Spike/sand_striker5.png" type="Texture" id=6]
[ext_resource path="res://Assets/Spike/sand_striker4.png" type="Texture" id=7]
[ext_resource path="res://Assets/Spike/sand_striker3.png" type="Texture" id=8]
[ext_resource path="res://Assets/Spike/sand_striker7.png" type="Texture" id=9]
[ext_resource path="res://Assets/Spike/sand1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Spike/sand2.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 1 ) ],
"loop": true,
"name": "snap",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 160, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 64.8748, 160 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 152, 152 )

[node name="Spike" type="StaticBody2D"]
script = ExtResource( 4 )

[node name="IdleAnim" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 4 )
playing = true

[node name="SnapAnim" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "snap"
frame = 3
playing = true

[node name="IdleShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 156 )
shape = SubResource( 2 )

[node name="SnapShape" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )
disabled = true

[node name="Timer" type="Timer" parent="."]

[node name="SpikeHitbox" type="Area2D" parent="."]
collision_layer = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikeHitbox"]
shape = SubResource( 6 )
[connection signal="animation_finished" from="SnapAnim" to="." method="_on_SnapAnim_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="SpikeHitbox" to="." method="_on_SpikeHitbox_body_entered"]
